2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/users.c remove includes of openssl headers.
	(check_user): Use libgcrypt to compute md5 sums.

	* openvasd/plugs_hash.c (md5sum_hex): New function to convert a
	binary md5 sum to hexadecimal.
	(file_hash, dir_plugins_hash, plugins_hash): Use libgcrypt to
	compute md5 sums.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/openvasd.c: Use the libopenvas ssl abstraction instead
	of openssl. As a consequence the ssl_cipher_list config option is
	no longer supported.
	(ssl_mt, ssl_ctx): Removed.
	(ovas_server_ctx): Introduced instead of ssl_mt and ssl_ctx
	(server_thread): Use the libopenvas ssl abstraction instead of
	openssl.
	(verify_callback): removed. verification is done in libopenvas.
	(main_loop): Use the libopenvas ssl abstraction instead of
	openssl.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/preferences.c: Always compile in
	preferences_get_string, i.e. do not depend on OPENVAS_ON_SSL being
	defined.

2007-06-22  Bernhard Herzog  <bh@intevation.de>

	* include/config.h, include/corevers.h: Removed from SVN because
	they're automatically generated by the configure script

2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure, include/config.h, include/corevers.h: Updated.

2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/threadcompat.h: Fix names and description to reflect
	thread as subject.

	* include/includes.h: Replace libnessus.h by libopenvas.h.

2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/ntcompat.h: Removed. Renamed to threadcompat.h
	because in fact it is about threads.

	* include/threadcompat.h: New. Previous ntcompat.h.

	* Makefile, MANIFEST, include/includes.h: Renamed ntcompat.h
	to threadcompat.h

2007-05-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/ntcompat.h: Remove now useless emtpy defines for